added heading style

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <header>
-        <div class="h">
+        <div class="header">
             <div>
-                <h1 class="textheader">Trackerz</h1>
+                <h1 class="headertext">Trackerz</h1>
             </div>
             <div class="menu">
                 <menu class="menuh">Company</menu>
@@ -21,42 +21,44 @@
                 <menu class="menuh">Business Solution</menu>
                 <menu class="menuh">Careers</menu>
             </div>
-            <div class="botoes">
-                <button class="login">Login</button>
-                <button class="register">Register</button>
+            <div class="buttons">
+                <button class="login button">Login</button>
+                <button class="register button">Register</button>
             </div>
         </div>
     </header>
 
     <section>
-        <div class="div1">
+        <div class="container">
             <div class="texto">
                 <h1>Better distribution</h1>
                 <h1>experience, fast</h1>
                 <h1>and safe delivery</h1>
-                <h1>with <a>Trackerz</a></h1>
+                <h1>with <span>Trackerz</span></h1>
                 <p>Trust us with all your delivers, we guarantee we will handle </p>
                 <p>them carefully, quickly and cheaply</p>
             </div>
             <div>
-                <img src="imagens/imagem.jpg" alt="imagem principal" class="img">
+                <img src="imagens/imagem.jpg" alt="imagem principal" class="main-img">
             </div>
         </div>
     </section>
 
-    <footer class="footer">
-        <div class="azul">
-            <h1 class="srazul">Tracking Package</h1>
-              <input type="register" id="register" name="register" required placeholder="your registered number">
-              <button class="trcbtn">Tracking</button>
-      </div>
-      <div class="laranja">
-          <h1 class="srlar">Shipping rate</h1>
-              <input type="origin" id="origin" name="origin" required placeholder="Your origin">
-              <input type="destination" id="destination" name="destination" required placeholder="Your destination">
-              <input type="weight" id="weight" name="weight" placeholder="1">
-              <button class="check">Check</button>
-      </div>
-    </footer>
+    <section>
+        <div class="search-menu">
+            <div class="azul">
+                <h1 class="srazul">Tracking Package</h1>
+                  <input type="register" id="register" name="register" required placeholder="your registered number">
+                  <button class="tracking button">Tracking</button>
+          </div>
+          <div class="laranja">
+              <h1 class="srlar">Shipping rate</h1>
+                  <input type="origin" id="origin" name="origin" required placeholder="Your origin">
+                  <input type="destination" id="destination" name="destination" required placeholder="Your destination">
+                  <input type="weight" id="weight" name="weight" placeholder="1">
+                  <button class="check">Check</button>
+          </div>
+        </div>
+    </section>
 
 </body>
