fixed container tags

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
     <section>
         <div class="container">
-            <div class="texto">
-                <h1>Better distribution</h1>
-                <h1>experience, fast</h1>
-                <h1>and safe delivery</h1>
-                <h1>with <span>Trackerz</span></h1>
-                <p>Trust us with all your delivers, we guarantee we will handle </p>
-                <p>them carefully, quickly and cheaply</p>
+            <div class="text">
+                <div class="headline">
+                    <p>Better distribution experience, fast and safe delivery with <span class="em">Trackerz</span></p>
+                </div>
+                <div class="subheadline">
+                    <p>Trust us with all your delivers, we guarantee we will handle them carefully, quickly and cheaply</p>
+                </div>
             </div>
             <div>
                 <img src="imagens/imagem.jpg" alt="imagem principal" class="main-img">
@@ -48,16 +48,16 @@
         <div class="search-menu">
             <div class="azul">
                 <h1 class="srazul">Tracking Package</h1>
-                  <input type="register" id="register" name="register" required placeholder="your registered number">
-                  <button class="tracking button">Tracking</button>
-          </div>
-          <div class="laranja">
-              <h1 class="srlar">Shipping rate</h1>
-                  <input type="origin" id="origin" name="origin" required placeholder="Your origin">
-                  <input type="destination" id="destination" name="destination" required placeholder="Your destination">
-                  <input type="weight" id="weight" name="weight" placeholder="1">
-                  <button class="check">Check</button>
-          </div>
+                <input type="register" id="register" name="register" required placeholder="your registered number">
+                <button class="tracking button">Tracking</button>
+            </div>
+            <div class="laranja">
+                <h1 class="srlar">Shipping rate</h1>
+                <input type="origin" id="origin" name="origin" required placeholder="Your origin">
+                <input type="destination" id="destination" name="destination" required placeholder="Your destination">
+                <input type="weight" id="weight" name="weight" placeholder="1">
+                <button class="check">Check</button>
+            </div>
         </div>
     </section>
 
