--- a/index.html
+++ b/index.html
@@ -1,64 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trackerz</title>
-    <link rel="stylesheet" href="src/index.css">
-    <link rel="shortcut icon" href="imagens/favicon-32x32.png">
-</head>
+    <link rel="stylesheet" href="src/index.css" />
+    <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <div class="header">
-            <div>
-                <h1 class="headertext">Trackerz</h1>
-            </div>
-            <div class="menu">
-                <menu class="menuh">Company</menu>
-                <menu class="menuh">Our Service</menu>
-                <menu class="menuh">Business Solution</menu>
-                <menu class="menuh">Careers</menu>
-            </div>
-            <div class="buttons">
-                <button class="login button">Login</button>
-                <button class="register button">Register</button>
-            </div>
+      <nav class="header">
+        <a href="#" class="headertext">
+          <h2>Trackerz</h2>
+        </a>
+        <div class="menu">
+          <ul>
+            <li class="menuh">
+              <a href="#" class="menuh">Company</a>
+            </li>
+            <li>
+              <a href="#" class="menuh">Our Service</a>
+            </li>
+            <li>
+              <a href="#" class="menuh">Business Solution</a>
+            </li>
+            <li>
+              <a href="#" class="menuh">Careers</a>
+            </li>
+          </ul>
         </div>
+        <!--AQUI NÃO PRECISA DESSA DIV-->
+        <div class="buttons">
+          <button class="login button" id="showLoginBtn">Login</button>
+          <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
+          <div id="loginForm" class="form-container oculto">
+            <form>
+              <input
+                type="text"
+                class="input-form"
+                name="nome"
+                placeholder="Username"
+              />
+              <input
+                type="password"
+                class="input-form"
+                name="email"
+                placeholder="Password"
+              />
+              <input type="submit" value="Enviar" class="btn input-form" />
+            </form>
+          </div>
+          <button class="register button" id="showCadastroBtn">Register</button>
+          <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
+          <div id="cadastroForm" class="form-container oculto">
+            <form>
+              <input
+                type="text"
+                class="input-form"
+                name="name"
+                placeholder="Name"
+              />
+              <input
+                type="email"
+                class="input-form"
+                name="email"
+                placeholder="E-mail"
+              />
+              <input
+                type="password"
+                class="input-form"
+                name="password"
+                placeholder="Password"
+              />
+              <input
+                type="password"
+                class="input-form"
+                name="confPassword"
+                placeholder="Confirm Password"
+              />
+              <input type="submit" value="Enviar" class="btn input-form" />
+            </form>
+          </div>
+        </div>
+      </nav>
     </header>
-
-    <section>
-        <div class="container">
-            <div class="text">
-                <div class="headline">
-                    <p>Better distribution experience, fast and safe delivery with <span class="em">Trackerz</span></p>
-                </div>
-                <div class="subheadline">
-                    <p>Trust us with all your delivers, we guarantee we will handle them carefully, quickly and cheaply</p>
-                </div>
-            </div>
-            <div>
-                <img src="imagens/imagem.jpg" alt="imagem principal" class="main-img">
-            </div>
+    <main>
+      <section class="container">
+        <div class="text">
+          <div class="headline">
+            <h1>
+              Better distribution experience, fast and safe delivery with
+              <span class="em">Trackerz</span>
+            </h1>
+            <p class="subheadline">
+              Trust us with all your delivers, we guarantee we will handle them
+              carefully, quickly and cheaply
+            </p>
+          </div>
         </div>
-    </section>
-
-    <section>
-        <div class="search-menu">
-            <div class="azul">
-                <h1 class="srazul">Tracking Package</h1>
-                <input type="register" id="register" name="register" required placeholder="your registered number">
-                <button class="tracking button">Tracking</button>
-            </div>
-            <div class="laranja">
-                <h1 class="srlar">Shipping rate</h1>
-                <input type="origin" id="origin" name="origin" required placeholder="Your origin">
-                <input type="destination" id="destination" name="destination" required placeholder="Your destination">
-                <input type="weight" id="weight" name="weight" placeholder="1">
-                <button class="check">Check</button>
-            </div>
+        <div>
+          <img
+            src="imagens/imagem.jpg"
+            alt="Desenho de um entregador pilotado uma moto, com mochila de entrega nas costas e logo atrás tem o senho de um celular com um aplicativo de GPS aberto"
+            class="main-img"
+          />
         </div>
-    </section>
+      </section>
+    </main>
 
-</body>
+    <section class="search-menu">
+      <div class="azul">
+        <h2 class="srazul">Tracking Package</h2>
+        <input
+          type="number"
+          id="register"
+          name="register"
+          required
+          placeholder="your registered number"
+        />
+        <button class="tracking button">Tracking</button>
+      </div>
+      <div class="laranja">
+        <h2 class="srlar">Shipping rate</h2>
+        <input
+          type="text"
+          id="origin"
+          name="origin"
+          required
+          placeholder="Your origin"
+        />
+        <input
+          type="text"
+          id="destination"
+          name="destination"
+          required
+          placeholder="Your destination"
+        />
+        <input type="number" id="weight" name="weight" placeholder="1" />
+        <button class="check">Check</button>
+      </div>
+    </section>
+    <script src="./index.js"></script>
+  </body>
+</html>
