--- a/index.html
+++ b/index.html
@@ -1,146 +1,98 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trackerz</title>
-    <link rel="stylesheet" href="src/index.css" />
-    <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
-  </head>
 
-  <body>
-    <header>
-      <nav class="header">
-        <a href="#" class="headertext">
-          <h2>Trackerz</h2>
-        </a>
-        <div class="menu">
-          <ul>
-            <li class="menuh">
-              <a href="#" class="menuh">Company</a>
-            </li>
-            <li>
-              <a href="#" class="menuh">Our Service</a>
-            </li>
-            <li>
-              <a href="#" class="menuh">Business Solution</a>
-            </li>
-            <li>
-              <a href="#" class="menuh">Careers</a>
-            </li>
-          </ul>
-        </div>
-        <!--AQUI NÃO PRECISA DESSA DIV-->
-        <div class="buttons">
-          <button class="login button" id="showLoginBtn">Login</button>
-          <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
-          <div id="loginForm" class="form-container oculto">
-            <form>
-              <input
-                type="text"
-                class="input-form"
-                name="nome"
-                placeholder="Username"
-              />
-              <input
-                type="password"
-                class="input-form"
-                name="email"
-                placeholder="Password"
-              />
-              <input type="submit" value="Enviar" class="btn input-form" />
-            </form>
-          </div>
-          <button class="register button" id="showCadastroBtn">Register</button>
-          <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
-          <div id="cadastroForm" class="form-container oculto">
-            <form>
-              <input
-                type="text"
-                class="input-form"
-                name="name"
-                placeholder="Name"
-              />
-              <input
-                type="email"
-                class="input-form"
-                name="email"
-                placeholder="E-mail"
-              />
-              <input
-                type="password"
-                class="input-form"
-                name="password"
-                placeholder="Password"
-              />
-              <input
-                type="password"
-                class="input-form"
-                name="confPassword"
-                placeholder="Confirm Password"
-              />
-              <input type="submit" value="Enviar" class="btn input-form" />
-            </form>
-          </div>
-        </div>
-      </nav>
-    </header>
-    <main>
-      <section class="container">
-        <div class="text">
-          <div class="headline">
-            <h1>
-              Better distribution experience, fast and safe delivery with
-              <span class="em">Trackerz</span>
-            </h1>
-            <p class="subheadline">
-              Trust us with all your delivers, we guarantee we will handle them
-              carefully, quickly and cheaply
-            </p>
-          </div>
-        </div>
-        <div>
-          <img
-            src="imagens/imagem.jpg"
-            alt="Desenho de um entregador pilotado uma moto, com mochila de entrega nas costas e logo atrás tem o senho de um celular com um aplicativo de GPS aberto"
-            class="main-img"
-          />
-        </div>
-      </section>
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Trackerz</title>
+  <link rel="stylesheet" href="src/index.css" />
+  <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
+</head>
 
-    <section class="search-menu">
-      <div class="azul">
-        <h2 class="srazul">Tracking Package</h2>
-        <input
-          type="number"
-          id="register"
-          name="register"
-          required
-          placeholder="your registered number"
-        />
-        <button class="tracking button">Tracking</button>
+<body>
+  <header>
+    <nav class="header">
+      <a href="#" class="headertext">
+        <h2>Trackerz</h2>
+      </a>
+      <div class="menu">
+        <ul>
+          <li class="menuh">
+            <a href="#" class="menuh">Company</a>
+          </li>
+          <li>
+            <a href="#" class="menuh">Our Service</a>
+          </li>
+          <li>
+            <a href="#" class="menuh">Business Solution</a>
+          </li>
+          <li>
+            <a href="#" class="menuh">Careers</a>
+          </li>
+        </ul>
       </div>
-      <div class="laranja">
-        <h2 class="srlar">Shipping rate</h2>
-        <input
-          type="text"
-          id="origin"
-          name="origin"
-          required
-          placeholder="Your origin"
-        />
-        <input
-          type="text"
-          id="destination"
-          name="destination"
-          required
-          placeholder="Your destination"
-        />
-        <input type="number" id="weight" name="weight" placeholder="1" />
-        <button class="check">Check</button>
+      <!--AQUI NÃO PRECISA DESSA DIV-->
+      <div class="buttons">
+        <button class="login button" id="showLoginBtn">Login</button>
+        <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
+        <div id="loginForm" class="form-container oculto">
+          <form>
+            <input type="text" class="input-form" name="nome" placeholder="Username" />
+            <input type="password" class="input-form" name="email" placeholder="Password" />
+            <input type="submit" value="Enviar" class="btn input-form" />
+          </form>
+        </div>
+        <button class="register button" id="showCadastroBtn">Register</button>
+        <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
+        <div id="cadastroForm" class="form-container oculto">
+          <form>
+            <input type="text" class="input-form" name="name" placeholder="Name" />
+            <input type="email" class="input-form" name="email" placeholder="E-mail" />
+            <input type="password" class="input-form" name="password" placeholder="Password" />
+            <input type="password" class="input-form" name="confPassword" placeholder="Confirm Password" />
+            <input type="submit" value="Enviar" class="btn input-form" />
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container">
+      <div class="text">
+        <div class="headline">
+          <h1>
+            Better distribution experience, fast and safe delivery with
+            <span class="em">Trackerz</span>
+          </h1>
+          <p class="subheadline">
+            Trust us with all your delivers, we guarantee we will handle them
+            carefully, quickly and cheaply
+          </p>
+        </div>
+      </div>
+      <div>
+        <img src="imagens/imagem.jpg"
+          alt="Desenho de um entregador pilotado uma moto, com mochila de entrega nas costas e logo atrás tem o senho de um celular com um aplicativo de GPS aberto"
+          class="main-img" />
       </div>
     </section>
-    <script src="./index.js"></script>
-  </body>
+  </main>
+
+  <section class="search-menu">
+    <div class="azul">
+      <h2 class="srazul">Tracking Package</h2>
+      <input type="number" id="register" name="register" required placeholder="your registered number" />
+      <button class="tracking button">Tracking</button>
+    </div>
+    <div class="laranja">
+      <h2 class="srlar">Shipping rate</h2>
+      <input type="text" id="origin" name="origin" required placeholder="Your origin" />
+      <input type="text" id="destination" name="destination" required placeholder="Your destination" />
+      <input type="number" id="weight" name="weight" placeholder="1" />
+      <button class="check">Check</button>
+    </div>
+  </section>
+  <script src="./index.js"></script>
+</body>
+
 </html>
