estilização nav e section principal

--- a/index.html
+++ b/index.html
@@ -17,18 +17,10 @@
       </a>
       <div class="menu">
         <ul>
-          <li class="menuh">
-            <a href="#" class="menuh">Company</a>
-          </li>
-          <li>
-            <a href="#" class="menuh">Our Service</a>
-          </li>
-          <li>
-            <a href="#" class="menuh">Business Solution</a>
-          </li>
-          <li>
-            <a href="#" class="menuh">Careers</a>
-          </li>
+          <li><a href="#" class="menuh">Company</a></li>
+          <li><a href="#" class="menuh">Our Service</a></li>
+          <li><a href="#" class="menuh">Business Solution</a></li>
+          <li><a href="#" class="menuh">Careers</a></li>
         </ul>
       </div>
       <!--AQUI NÃO PRECISA DESSA DIV-->
