--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trackerz</title>
-  <link rel="stylesheet" href="src/index.css" />
-  <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
+  
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trackerz</title>
+    <link rel="stylesheet" href="src/index.css" />
+    <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
+    <script src="./src/index.js"></script>
 </head>
 
 <body>
@@ -83,7 +84,6 @@
       <button class="check">Check</button>
     </div>
   </section>
-  <script src="./index.js"></script>
 </body>
 
 </html>
