--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <nav class="header">
         <a href="#" class="headertext">
-          <h2>Trackerz</h2>
+          <p>Trackerz</p>
         </a>
         <div class="menu">
           <ul>
@@ -140,6 +140,9 @@
         <input type="number" id="weight" name="weight" placeholder="1" />
         <button class="check">Check</button>
       </div>
+    </section>
+    <section>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15925.210918470839!2d-38.495503500000005!3d-3.7440853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1695852919010!5m2!1spt-BR!2sbr" width="1410" height="120" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 <footer>
   <div>
