--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       </section>
     </main>
 
-    <section class="search-menu">
+    <section class="search-menu"> <!-- ! colocar os inputs dentro de forms -->
       <div class="left-side">
         <p class="menu-heading">Tracking Package</p>
         <input
@@ -117,7 +117,7 @@
       <div class="right-side">
         <p class="menu-heading">Shipping rate</p>
         <input
-        class="menuInput"
+          class="menuInput"
           type="text"
           id="origin"
           name="origin"
@@ -136,56 +136,62 @@
       </div>
     </section>
     <section>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15925.210918470839!2d-38.495503500000005!3d-3.7440853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1695852919010!5m2!1spt-BR!2sbr" width="1410" height="120" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15925.210918470839!2d-38.495503500000005!3d-3.7440853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1695852919010!5m2!1spt-BR!2sbr"
+        width="1410"
+        height="120"
+        style="border: 0"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"
+      ></iframe>
     </section>
-<footer>
-  <div>
-    <a href="#"><h2>Trackerz</h2></a>
-  </div>
-  <p>
-    ©2023 Equipe Pipoquinhas <br />
-    Todos os direitos reservados.
-  </p>
-  <div>
-    <ul class="social-links">
-      <li>
-        <a
-          target="_blank"
-          href="https://www.instagram.com"
-          ><svg
-            width="40"
-            height="40"
-            viewBox="0 0 24 24"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M17 1.99997H7C4.23858 1.99997 2 4.23855 2 6.99997V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V6.99997C22 4.23855 19.7614 1.99997 17 1.99997Z"
-              stroke="#FFFAF1"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M15.9997 11.3701C16.1231 12.2023 15.981 13.0523 15.5935 13.7991C15.206 14.5459 14.5929 15.1515 13.8413 15.5297C13.0898 15.908 12.2382 16.0397 11.4075 15.906C10.5768 15.7723 9.80947 15.3801 9.21455 14.7852C8.61962 14.1903 8.22744 13.4229 8.09377 12.5923C7.96011 11.7616 8.09177 10.91 8.47003 10.1584C8.84829 9.40691 9.45389 8.7938 10.2007 8.4063C10.9475 8.0188 11.7975 7.87665 12.6297 8.00006C13.4786 8.12594 14.2646 8.52152 14.8714 9.12836C15.4782 9.73521 15.8738 10.5211 15.9997 11.3701Z"
-              stroke="#FFFAF1"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-            <path
-              d="M17.5 6.49997H17.51"
-              stroke="#FFFAF1"
-              stroke-width="2"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-            />
-          </svg>
-        </a>
-      </li>
-    </ul>
-  </div>
-</footer>
+    <footer>
+      <div>
+        <a href="#"><h2>Trackerz</h2></a>
+      </div>
+      <p>
+        ©2023 Equipe Pipoquinhas <br />
+        Todos os direitos reservados.
+      </p>
+      <div>
+        <ul class="social-links">
+          <li>
+            <a target="_blank" href="https://www.instagram.com"
+              ><svg
+                width="40"
+                height="40"
+                viewBox="0 0 24 24"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M17 1.99997H7C4.23858 1.99997 2 4.23855 2 6.99997V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V6.99997C22 4.23855 19.7614 1.99997 17 1.99997Z"
+                  stroke="#FFFAF1"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M15.9997 11.3701C16.1231 12.2023 15.981 13.0523 15.5935 13.7991C15.206 14.5459 14.5929 15.1515 13.8413 15.5297C13.0898 15.908 12.2382 16.0397 11.4075 15.906C10.5768 15.7723 9.80947 15.3801 9.21455 14.7852C8.61962 14.1903 8.22744 13.4229 8.09377 12.5923C7.96011 11.7616 8.09177 10.91 8.47003 10.1584C8.84829 9.40691 9.45389 8.7938 10.2007 8.4063C10.9475 8.0188 11.7975 7.87665 12.6297 8.00006C13.4786 8.12594 14.2646 8.52152 14.8714 9.12836C15.4782 9.73521 15.8738 10.5211 15.9997 11.3701Z"
+                  stroke="#FFFAF1"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M17.5 6.49997H17.51"
+                  stroke="#FFFAF1"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="./index.js"></script>
   </body>
