--- a/index.html
+++ b/index.html
@@ -35,27 +35,28 @@
           <button class="login button" id="showLoginBtn">Login</button>
           <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
           <div id="loginForm" class="form-container oculto">
-            <form>
+            <form class="absolut">
               <input
                 type="text"
                 class="input-form"
                 name="nome"
                 placeholder="Username"
-              />
-              <input
+                />
+                <input
                 type="password"
                 class="input-form"
                 name="email"
                 placeholder="Password"
-              />
-              <input type="submit" value="Enviar" class="btn input-form" />
-            </form>
-          </div>
-          <button class="register button" id="showCadastroBtn">Register</button>
-          <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
-          <div id="cadastroForm" class="form-container oculto">
-            <form>
-              <input
+                />
+                <input type="submit" value="Enviar" class="btn input-form" />
+              </form>
+            <img src="/imagens/anima-3.gif" alt="" class="imgforms">
+            </div>
+            <button class="register button" id="showCadastroBtn">Register</button>
+            <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
+            <div id="cadastroForm" class="form-container oculto">
+              <form class="absolut2">
+                <input
                 type="text"
                 class="input-form"
                 name="name"
@@ -80,6 +81,7 @@
                 placeholder="Confirm Password"
               />
               <input type="submit" value="Enviar" class="btn input-form" />
+              <img src="/imagens/anima-3.gif" alt="" class="imgforms2">
             </form>
           </div>
         </div>
