--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div class="right-side">
       <p class="menu-heading">Shipping rate</p>
       <input class="menuInput" type="text" id="origin" name="origin" required placeholder="Your origin" />
-      <input type="text" id="destination" name="destination" required placeholder="Your destination" />
-      <input type="number" id="weight" name="weight" placeholder="1" />
+      <input class="menuInput" type="text" id="destination" name="destination" required placeholder="Your destination" />
+      <input class="menuInput" type="number" id="weight" name="weight" placeholder="1" />
       <button class="check">Check</button>
     </div>
   </section>
