criação e estilização do footer

--- a/index.html
+++ b/index.html
@@ -130,25 +130,23 @@
     </div>
   </section>
   <section>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15925.210918470839!2d-38.495503500000005!3d-3.7440853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1695852919010!5m2!1spt-BR!2sbr"
-      width="1410" height="120" style="border: 0" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
   </section>
   <footer>
     <div>
       <a href="#">
-        <h2>Trackerz</h2>
+        <h2 class="title-footer">Trackerz</h2>
       </a>
     </div>
-    <p>
-      ©2023 Equipe Pipoquinhas <br />
+    <p class="paragraph">
+      ©2023 Equipe Pipoquinhas.
       Todos os direitos reservados.
     </p>
-    <div>
-      <ul class="social-links">
-        <li>
-          <a target="_blank" href="https://www.instagram.com"><svg width="40" height="40" viewBox="0 0 24 24"
+  
+    <div class="social-links">
+      <ul>
+        <li> 
+          <a target="_blank" href="https://www.instagram.com/trackerzoficial/"><svg width="30" height="30" viewBox="0 0 24 24"
               fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M17 1.99997H7C4.23858 1.99997 2 4.23855 2 6.99997V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V6.99997C22 4.23855 19.7614 1.99997 17 1.99997Z"
@@ -163,6 +161,7 @@
         </li>
       </ul>
     </div>
+    
   </footer>
   <script src="/src/index.js"></script>
 </body>
