--- a/index.html
+++ b/index.html
@@ -9,116 +9,98 @@
   <link rel="shortcut icon" href="imagens/favicon-32x32.png" />
 </head>
 
-  <body>
-    <header>
-      <nav class="header">
-        <a href="#" class="headertext">
-          <h2>Trackerz</h2>
-        </a>
-        <div class="menu">
-          <ul>
-            <li><a href="#" class="menuh">Company</a></li>
-            <li><a href="#" class="menuh">Our Service</a></li>
-            <li><a href="#" class="menuh">Business Solution</a></li>
-            <li><a href="#" class="menuh">Careers</a></li>
-          </ul>
+<body>
+  <header>
+    <nav class="header">
+      <a href="#" class="headertext">
+        <h2>Trackerz</h2>
+      </a>
+      <div class="menu">
+        <ul>
+          <li><a href="#" class="menuh">Company</a></li>
+          <li><a href="#" class="menuh">Our Service</a></li>
+          <li><a href="#" class="menuh">Business Solution</a></li>
+          <li><a href="#" class="menuh">Careers</a></li>
+        </ul>
+      </div>
+      <div class="buttons">
+        <button class="login button" id="showLoginBtn">Login</button>
+        <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
+        <div id="loginForm" class="form-container oculto">
+          <form class="absolut">
+            <input type="text" class="input-form" name="nome" placeholder="Username" />
+            <input type="password" class="input-form" name="email" placeholder="Password" />
+            <input type="submit" value="Enviar" class="btn input-form" />
+          </form>
+          <img src="/imagens/anima-3.gif" alt="" class="imgforms">
         </div>
-        <div class="buttons">
-          <button class="login button" id="showLoginBtn">Login</button>
-          <!--PRIMEIRO FORMULÁRIO DE LOGIN-->
-          <div id="loginForm" class="form-container oculto">
-            <form class="absolut">
-              <input
-                type="text"
-                class="input-form"
-                name="nome"
-                placeholder="Username"
-                />
-                <input
-                type="password"
-                class="input-form"
-                name="email"
-                placeholder="Password"
-                />
-                <input type="submit" value="Enviar" class="btn input-form" />
-              </form>
-            <img src="/imagens/anima-3.gif" alt="" class="imgforms">
-            </div>
-            <button class="register button" id="showCadastroBtn">Register</button>
-            <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
-            <div id="cadastroForm" class="form-container oculto">
-              <form class="absolut">
-                <input
-                type="text"
-                class="input-form"
-                name="name"
-                placeholder="Name"
-              />
-              <input
-                type="email"
-                class="input-form"
-                name="email"
-                placeholder="E-mail"
-              />
-              <input
-                type="password"
-                class="input-form"
-                name="password"
-                placeholder="Password"
-              />
-              <input
-                type="password"
-                class="input-form"
-                name="confPassword"
-                placeholder="Confirm Password"
-              />
-              <input type="submit" value="Enviar" class="btn input-form" />
-            </form>
-            <img src="/imagens/anima-3.gif" alt="" class="imgforms2">
-          </div>
+        <button class="register button" id="showCadastroBtn">Register</button>
+        <!--SEGUNDO FORMULÁRIO PARA CADASTRO-->
+        <div id="cadastroForm" class="form-container oculto">
+          <form class="absolut">
+            <input type="text" class="input-form" name="name" placeholder="Name" />
+            <input type="email" class="input-form" name="email" placeholder="E-mail" />
+            <input type="password" class="input-form" name="password" placeholder="Password" />
+            <input type="password" class="input-form" name="confPassword" placeholder="Confirm Password" />
+            <input type="submit" value="Enviar" class="btn input-form" />
+          </form>
+          <img src="/imagens/anima-3.gif" alt="" class="imgforms2">
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="container">
-        <div class="text">
-          <div class="headline">
-            <h1>
-              Better distribution experience, fast and safe delivery with
-              <span class="em">Trackerz</span>
-            </h1>
-            <p class="subheadline">
-              Trust us with all your delivers, we guarantee we will handle them
-              carefully, quickly and cheaply
-            </p>
-          </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="container">
+      <div class="text">
+        <div class="headline">
+          <h1>
+            Better distribution experience, fast and safe delivery with
+            <span class="em">Trackerz</span>
+          </h1>
+          <p class="subheadline">
+            Trust us with all your delivers, we guarantee we will handle them
+            carefully, quickly and cheaply
+          </p>
         </div>
-        <div>
-          <img
-            src="imagens/imagem.jpg"
-            alt="Desenho de um entregador pilotado uma moto, com mochila de entrega nas costas e logo atrás tem o senho de um celular com um aplicativo de GPS aberto"
-            class="main-img"
-          />
-        </div>
-      </section>
-    </main>
+      </div>
+      <div>
+        <img src="imagens/imagem.jpg"
+          alt="Desenho de um entregador pilotado uma moto, com mochila de entrega nas costas e logo atrás tem o senho de um celular com um aplicativo de GPS aberto"
+          class="main-img" />
+      </div>
+    </section>
+  </main>
 
   <section>
     <div class="search-menu">
       <div class="left-side">
         <h4 class="menu-heading">Tracking Package</h4>
-        <input class="menuInput" type="number" id="register" name="register" required
-          placeholder="your registered number" />
-        <button class="tracking button">Tracking</button>
+        <form>
+          <input class="menuInput" type="number" id="register" name="register" required
+            placeholder="Your registered number" />
+          <button class="tracking button">Tracking</button>
+        </form>
+        <p class="menuSubtitles">
+          Then Click 'TRACKING' Avaliable up to 20 Airwaybill
+        </p>
       </div>
 
       <div class="right-side">
         <h4 class="menu-heading">Shipping rate</h4>
         <div class="input-group">
-          <input class="menuInput" type="text" id="origin" name="origin" required placeholder="Your origin" />
-          <input class="menuInput" type="text" id="destination" name="destination" required
-            placeholder="Your destination" />
-          <input class="menuInput" type="number" id="weight" name="weight" placeholder="1" />
+          <div>
+            <input class="menuInput" type="text" id="origin" name="origin" required placeholder="Your origin" />
+            <p class="menuSubtitles white">Origin Shipment</p>
+          </div>
+         <div>
+            <input class="menuInput" type="text" id="destination" name="destination" required
+              placeholder="Your destination" />
+            <p class="menuSubtitles white">Destination Shipment</p>
+         </div>
+         <div>
+            <input class="menuInput" type="number" id="weight" name="weight" placeholder="1" />
+            <p class="menuSubtitles white">Weight</p>
+         </div>
           <button class="check">Check</button>
         </div>
       </div>
@@ -126,7 +108,7 @@
   </section>
 
   <section>
-    
+
   </section>
   <footer>
     <div>
@@ -138,12 +120,12 @@
       ©2023 Equipe Pipoquinhas.
       Todos os direitos reservados.
     </p>
-  
+
     <div class="social-links">
       <ul>
-        <li> 
-          <a target="_blank" href="https://www.instagram.com/trackerzoficial/"><svg width="30" height="30" viewBox="0 0 24 24"
-              fill="none" xmlns="http://www.w3.org/2000/svg">
+        <li>
+          <a target="_blank" href="https://www.instagram.com/trackerzoficial/"><svg width="30" height="30"
+              viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M17 1.99997H7C4.23858 1.99997 2 4.23855 2 6.99997V17C2 19.7614 4.23858 22 7 22H17C19.7614 22 22 19.7614 22 17V6.99997C22 4.23855 19.7614 1.99997 17 1.99997Z"
                 stroke="#FFFAF1" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -157,7 +139,7 @@
         </li>
       </ul>
     </div>
-    
+
   </footer>
   <script src="/src/index.js"></script>
 </body>
