--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <div class="social-links">
         <ul>
           <li>
-            <a target="_blank" href="https://instagram.com/trackerzoficial?igshid=MzRlODBiNWFlZA=="
+            <a target="_blank" href="https://instagram.com/trackerzoficial"
               ><svg
                 width="35"
                 height="35"
